--- a/package.json
+++ b/package.json
@@ -18,5 +18,11 @@
     "gatsby": "^3.12.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.3.3",
+    "gatsby-plugin-postcss": "^4.12.0",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.8"
   }
 }
