--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   },
   "dependencies": {
     "gatsby": "^3.12.1",
+    "gatsby-plugin-netlify-cms": "^5.12.0",
     "gatsby-source-filesystem": "^3.12.0",
+    "netlify-cms-app": "^2.15.39",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
