--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby": "^3.12.1",
     "gatsby-plugin-netlify-cms": "^5.12.0",
     "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-remark": "^4.9.0",
     "netlify-cms-app": "^2.15.39",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
