--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -3,6 +3,7 @@ backend:
   repo: nurhudajoantama/blog
   branch: main
 
+publish_mode: editorial_workflow
 media_folder: static/assets
 public_folder: /assets
 
