--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "gatsby": "^3.12.1",
+    "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-netlify-cms": "^5.12.0",
     "gatsby-plugin-page-creator": "^3.12.0",
+    "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-sharp": "^3.12.0",
     "netlify-cms-app": "^2.15.39",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
