--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -14,6 +14,7 @@ collections:
     create: true
     fields:
       - { name: path, label: Path }
-      - { name: date, label: Date, widget: datetime }
       - { name: title, label: Title }
+      - { name: thumbnail, label: Featured Image, widget: image }
+      - { name: date, label: Date, widget: datetime }
       - { name: body, label: Body, widget: markdown }
