--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -15,6 +15,6 @@ collections:
     fields:
       - { name: path, label: Path }
       - { name: title, label: Title }
-      - { name: thumbnail, label: Featured Image, widget: image }
+      - { name: thumbnail, label: Featured Image, widget: image, default: /assets/default.png, media_folder: images }
       - { name: date, label: Date, widget: datetime }
       - { name: body, label: Body, widget: markdown }
