--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,17 +4,38 @@ backend:
   branch: main
 
 publish_mode: editorial_workflow
+# media_folder: static/images
+# public_folder: /images
+
+# collections:
+#   - name: blog
+#     label: Blog
+#     folder: blog
+#     create: true
+#     fields:
+#       - { name: path, label: Path }
+#       - { name: title, label: Title }
+#       - { name: thumbnail, label: Featured Image, widget: image, default: default.png }
+#       - { name: date, label: Date, widget: datetime }
+#       - { name: body, label: Body, widget: markdown }
+
 media_folder: static/assets
 public_folder: /assets
 
 collections:
-  - name: blog
-    label: Blog
-    folder: blog
+  - name: "blog"
+    label: "Blog"
+    folder: "content/blog"
     create: true
+    slug: "index"
+    media_folder: ""
+    public_folder: ""
+    path: "{{title}}/index"
+    editor:
+      preview: false
     fields:
-      - { name: path, label: Path }
-      - { name: title, label: Title }
-      - { name: thumbnail, label: Featured Image, widget: image, default: /assets/default.png, media_folder: images }
-      - { name: date, label: Date, widget: datetime }
-      - { name: body, label: Body, widget: markdown }
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { name: thumbnail, label: Featured Image, widget: image }
+      - { label: "Description", name: "description", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
