--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "gatsby-plugin-netlify-cms": "^5.12.0",
     "gatsby-plugin-page-creator": "^3.12.0",
     "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-sharp": "^3.12.0",
+    "gsap": "^3.7.1",
     "netlify-cms-app": "^2.15.39",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
