--- a/package.json
+++ b/package.json
@@ -24,10 +24,12 @@
     "gatsby-plugin-page-creator": "^3.12.0",
     "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-plugin-transition-link": "^1.20.5",
+    "gatsby-remark-prismjs": "^5.10.0",
     "gatsby-source-filesystem": "^3.12.0",
     "gatsby-transformer-sharp": "^3.12.0",
     "gsap": "^3.7.1",
     "netlify-cms-app": "^2.15.39",
+    "prismjs": "^1.24.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
