--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gatsby-plugin-mdx": "^2.12.0",
     "gatsby-plugin-netlify-cms": "^5.12.0",
     "gatsby-plugin-page-creator": "^3.12.0",
+    "gatsby-plugin-react-helmet": "^4.13.0",
     "gatsby-plugin-sharp": "^3.12.0",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-prismjs": "^5.10.0",
@@ -31,7 +32,8 @@
     "netlify-cms-app": "^2.15.39",
     "prismjs": "^1.24.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.3.3",
