--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gsap": "^3.7.1",
     "netlify-cms-app": "^2.15.39",
     "prismjs": "^1.24.1",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
