--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-plugin-page-creator": "^3.12.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
     "gatsby-plugin-sharp": "^3.12.0",
+    "gatsby-plugin-sitemap": "^4.9.0",
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-prismjs": "^5.10.0",
     "gatsby-source-filesystem": "^3.12.0",
