--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/react": "^1.6.22",
     "dotenv": "^10.0.0",
     "gatsby": "^3.12.1",
+    "gatsby-plugin-google-tagmanager": "^3.13.0",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-mdx": "^2.12.0",
