--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -16,6 +16,7 @@ collections:
       - { name: path, label: Path }
       - { name: title, label: Title }
       - { name: description, label: Description }
+      - { name: isAssignment, label: Assignment, widget: boolean, default: false }
       - { name: thumbnail, label: Featured Image, widget: image, media_folder: images, required: false }
       - { name: date, label: Date, widget: datetime }
       - { name: body, label: Body, widget: markdown }
