--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dotenv": "^10.0.0",
     "gatsby": "^3.12.1",
     "gatsby-plugin-alias-imports": "^1.0.5",
+    "gatsby-plugin-disqus": "^1.2.3",
     "gatsby-plugin-google-tagmanager": "^3.13.0",
     "gatsby-plugin-image": "^1.12.0",
     "gatsby-plugin-manifest": "^3.13.0",
