--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@gatsby-contrib/gatsby-plugin-elasticlunr-search": "^3.0.2",
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "dotenv": "^10.0.0",
@@ -33,6 +34,7 @@
     "gatsby-plugin-transition-link": "^1.20.5",
     "gatsby-remark-prismjs": "^5.10.0",
     "gatsby-source-filesystem": "^3.12.0",
+    "gatsby-transformer-remark": "^4.11.0",
     "gatsby-transformer-sharp": "^3.12.0",
     "gsap": "^3.7.1",
     "netlify-cms-app": "^2.15.39",
